--- a/genindex.html
+++ b/genindex.html
@@ -81,11 +81,19 @@
 <h2 id="C">C</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="copyxnat.xnat.commands.html#copyxnat.xnat.commands.CheckDatatypesCommand.CACHE_TYPE">CACHE_TYPE (copyxnat.xnat.commands.CheckDatatypesCommand attribute)</a>
+
+      <ul>
+        <li><a href="copyxnat.xnat.commands.html#copyxnat.xnat.commands.CopyCommand.CACHE_TYPE">(copyxnat.xnat.commands.CopyCommand attribute)</a>
+</li>
+        <li><a href="copyxnat.xnat.commands.html#copyxnat.xnat.commands.ExportCommand.CACHE_TYPE">(copyxnat.xnat.commands.ExportCommand attribute)</a>
+</li>
+        <li><a href="copyxnat.xnat.commands.html#copyxnat.xnat.commands.ShowCommand.CACHE_TYPE">(copyxnat.xnat.commands.ShowCommand attribute)</a>
+</li>
+      </ul></li>
       <li><a href="copyxnat.xnat.copy_cache.html#copyxnat.xnat.copy_cache.CacheBox">CacheBox (class in copyxnat.xnat.copy_cache)</a>
 </li>
-      <li><a href="copyxnat.xnat.commands.html#copyxnat.xnat.commands.check_datatypes_command">check_datatypes_command() (in module copyxnat.xnat.commands)</a>
-</li>
-      <li><a href="copyxnat.xnat.commands.html#copyxnat.xnat.commands.check_datatypes_tostring">check_datatypes_tostring() (in module copyxnat.xnat.commands)</a>
+      <li><a href="copyxnat.xnat.commands.html#copyxnat.xnat.commands.CheckDatatypesCommand">CheckDatatypesCommand (class in copyxnat.xnat.commands)</a>
 </li>
       <li><a href="copyxnat.xnat.xml_cleaner.html#copyxnat.xnat.xml_cleaner.XmlCleaner.clean">clean() (copyxnat.xnat.xml_cleaner.XmlCleaner method)</a>
 
@@ -97,7 +105,7 @@
       </ul></li>
       <li><a href="copyxnat.xnat.commands.html#copyxnat.xnat.commands.Command">Command (class in copyxnat.xnat.commands)</a>
 </li>
-      <li><a href="copyxnat.xnat.commands.html#copyxnat.xnat.commands.command_factory">command_factory() (in module copyxnat.xnat.commands)</a>
+      <li><a href="copyxnat.xnat.commands.html#copyxnat.xnat.commands.CommandInputs">CommandInputs (class in copyxnat.xnat.commands)</a>
 </li>
       <li><a href="copyxnat.xnat.commands.html#copyxnat.xnat.commands.CommandReturn">CommandReturn (class in copyxnat.xnat.commands)</a>
 </li>
@@ -105,9 +113,9 @@
 </li>
       <li><a href="copyxnat.pyreporter.pyreporter.html#copyxnat.pyreporter.pyreporter.PyReporter.complete_progress">complete_progress() (copyxnat.pyreporter.pyreporter.PyReporter method)</a>
 </li>
-      <li><a href="copyxnat.xnat.commands.html#copyxnat.xnat.commands.copy_command">copy_command() (in module copyxnat.xnat.commands)</a>
-</li>
       <li><a href="copyxnat.xnat.copy_cache.html#copyxnat.xnat.copy_cache.CopyCache">CopyCache (class in copyxnat.xnat.copy_cache)</a>
+</li>
+      <li><a href="copyxnat.xnat.commands.html#copyxnat.xnat.commands.CopyCommand">CopyCommand (class in copyxnat.xnat.commands)</a>
 </li>
       <li>
     copyxnat
@@ -138,13 +146,6 @@
 </li>
       </ul></li>
       <li>
-    copyxnat.ui.copyxnat_command_line
-
-      <ul>
-        <li><a href="copyxnat.ui.copyxnat_command_line.html#module-copyxnat.ui.copyxnat_command_line">module</a>
-</li>
-      </ul></li>
-      <li>
     copyxnat.utils
 
       <ul>
@@ -165,6 +166,8 @@
         <li><a href="copyxnat.utils.versioning.html#module-copyxnat.utils.versioning">module</a>
 </li>
       </ul></li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li>
     copyxnat.xnat
 
@@ -172,8 +175,6 @@
         <li><a href="copyxnat.xnat.html#module-copyxnat.xnat">module</a>
 </li>
       </ul></li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li>
     copyxnat.xnat.commands
 
@@ -230,10 +231,6 @@
         <li><a href="copyxnat.xnat_backend.server_factory.html#module-copyxnat.xnat_backend.server_factory">module</a>
 </li>
       </ul></li>
-      <li><a href="copyxnat.xnat.commands.html#copyxnat.xnat.commands.count_command">count_command() (in module copyxnat.xnat.commands)</a>
-</li>
-      <li><a href="copyxnat.xnat.commands.html#copyxnat.xnat.commands.count_tostring">count_tostring() (in module copyxnat.xnat.commands)</a>
-</li>
       <li><a href="copyxnat.xnat_backend.pyxnat_server.html#copyxnat.xnat_backend.pyxnat_server.PyXnatAssessor.create">create() (copyxnat.xnat_backend.pyxnat_server.PyXnatAssessor class method)</a>
 
       <ul>
@@ -306,7 +303,7 @@
       </ul></li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="copyxnat.xnat.commands.html#copyxnat.xnat.commands.export_command">export_command() (in module copyxnat.xnat.commands)</a>
+      <li><a href="copyxnat.xnat.commands.html#copyxnat.xnat.commands.ExportCommand">ExportCommand (class in copyxnat.xnat.commands)</a>
 </li>
   </ul></td>
 </tr></table>
@@ -460,8 +457,6 @@
 <h2 id="M">M</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="copyxnat.ui.copyxnat_command_line.html#copyxnat.ui.copyxnat_command_line.main">main() (in module copyxnat.ui.copyxnat_command_line)</a>
-</li>
       <li><a href="copyxnat.xnat.xml_cleaner.html#copyxnat.xnat.xml_cleaner.XmlCleaner.make_project_names_unique">make_project_names_unique() (copyxnat.xnat.xml_cleaner.XmlCleaner method)</a>
 </li>
       <li><a href="copyxnat.pyreporter.pyreporter.html#copyxnat.pyreporter.pyreporter.PyReporter.message">message() (copyxnat.pyreporter.pyreporter.PyReporter method)</a>
@@ -479,8 +474,6 @@
         <li><a href="copyxnat.pyreporter.pyreporter.html#module-copyxnat.pyreporter.pyreporter">copyxnat.pyreporter.pyreporter</a>
 </li>
         <li><a href="copyxnat.ui.html#module-copyxnat.ui">copyxnat.ui</a>
-</li>
-        <li><a href="copyxnat.ui.copyxnat_command_line.html#module-copyxnat.ui.copyxnat_command_line">copyxnat.ui.copyxnat_command_line</a>
 </li>
         <li><a href="copyxnat.utils.html#module-copyxnat.utils">copyxnat.utils</a>
 </li>
@@ -515,16 +508,32 @@
 <h2 id="N">N</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="copyxnat.xnat.xml_cleaner.html#copyxnat.xnat.xml_cleaner.XmlCleaner.NAMESPACES">NAMESPACES (copyxnat.xnat.xml_cleaner.XmlCleaner attribute)</a>
+      <li><a href="copyxnat.xnat.commands.html#copyxnat.xnat.commands.CheckDatatypesCommand.NAME">NAME (copyxnat.xnat.commands.CheckDatatypesCommand attribute)</a>
+
+      <ul>
+        <li><a href="copyxnat.xnat.commands.html#copyxnat.xnat.commands.CopyCommand.NAME">(copyxnat.xnat.commands.CopyCommand attribute)</a>
 </li>
-      <li><a href="copyxnat.xnat.copy_cache.html#copyxnat.xnat.copy_cache.CacheBox.new_cache">new_cache() (copyxnat.xnat.copy_cache.CacheBox method)</a>
+        <li><a href="copyxnat.xnat.commands.html#copyxnat.xnat.commands.ExportCommand.NAME">(copyxnat.xnat.commands.ExportCommand attribute)</a>
+</li>
+        <li><a href="copyxnat.xnat.commands.html#copyxnat.xnat.commands.ShowCommand.NAME">(copyxnat.xnat.commands.ShowCommand attribute)</a>
+</li>
+      </ul></li>
+      <li><a href="copyxnat.xnat.xml_cleaner.html#copyxnat.xnat.xml_cleaner.XmlCleaner.NAMESPACES">NAMESPACES (copyxnat.xnat.xml_cleaner.XmlCleaner attribute)</a>
 </li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="copyxnat.xnat.copy_cache.html#copyxnat.xnat.copy_cache.CacheBox.new_cache">new_cache() (copyxnat.xnat.copy_cache.CacheBox method)</a>
+</li>
       <li><a href="copyxnat.pyreporter.pyreporter.html#copyxnat.pyreporter.pyreporter.PyReporter.next_progress">next_progress() (copyxnat.pyreporter.pyreporter.PyReporter method)</a>
 </li>
       <li><a href="copyxnat.utils.versioneer_version.html#copyxnat.utils.versioneer_version.NotThisMethod">NotThisMethod</a>, <a href="versioneer.html#versioneer.NotThisMethod">[1]</a>
 </li>
+      <li><a href="copyxnat.xnat.xnat_interface.html#copyxnat.xnat.xnat_interface.XnatServer.num_experiments">num_experiments() (copyxnat.xnat.xnat_interface.XnatServer method)</a>
+
+      <ul>
+        <li><a href="copyxnat.xnat_backend.pyxnat_server.html#copyxnat.xnat_backend.pyxnat_server.PyXnatServer.num_experiments">(copyxnat.xnat_backend.pyxnat_server.PyXnatServer method)</a>
+</li>
+      </ul></li>
   </ul></td>
 </tr></table>
 
@@ -535,6 +544,12 @@
 
       <ul>
         <li><a href="versioneer.html#versioneer.plus_or_dot">(in module versioneer)</a>
+</li>
+      </ul></li>
+      <li><a href="copyxnat.xnat.commands.html#copyxnat.xnat.commands.CheckDatatypesCommand.print_results">print_results() (copyxnat.xnat.commands.CheckDatatypesCommand method)</a>
+
+      <ul>
+        <li><a href="copyxnat.xnat.commands.html#copyxnat.xnat.commands.Command.print_results">(copyxnat.xnat.commands.Command method)</a>
 </li>
       </ul></li>
       <li><a href="copyxnat.xnat.xml_cleaner.html#copyxnat.xnat.xml_cleaner.XnatType.project">project (copyxnat.xnat.xml_cleaner.XnatType attribute)</a>
@@ -555,10 +570,10 @@
       </ul></li>
       <li><a href="copyxnat.xnat_backend.pyxnat_server.html#copyxnat.xnat_backend.pyxnat_server.PyXnatServer.projects">projects() (copyxnat.xnat_backend.pyxnat_server.PyXnatServer method)</a>
 </li>
-      <li><a href="copyxnat.pyreporter.pyreporter.html#copyxnat.pyreporter.pyreporter.PyReporter">PyReporter (class in copyxnat.pyreporter.pyreporter)</a>
-</li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="copyxnat.pyreporter.pyreporter.html#copyxnat.pyreporter.pyreporter.PyReporter">PyReporter (class in copyxnat.pyreporter.pyreporter)</a>
+</li>
       <li><a href="copyxnat.xnat_backend.pyxnat_server.html#copyxnat.xnat_backend.pyxnat_server.PyXnatAssessor">PyXnatAssessor (class in copyxnat.xnat_backend.pyxnat_server)</a>
 </li>
       <li><a href="copyxnat.xnat_backend.pyxnat_server.html#copyxnat.xnat_backend.pyxnat_server.PyXnatExperiment">PyXnatExperiment (class in copyxnat.xnat_backend.pyxnat_server)</a>
@@ -625,14 +640,14 @@
         <li><a href="versioneer.html#versioneer.render_pep440_old">(in module versioneer)</a>
 </li>
       </ul></li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="copyxnat.utils.versioneer_version.html#copyxnat.utils.versioneer_version.render_pep440_post">render_pep440_post() (in module copyxnat.utils.versioneer_version)</a>
 
       <ul>
         <li><a href="versioneer.html#versioneer.render_pep440_post">(in module versioneer)</a>
 </li>
       </ul></li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="copyxnat.utils.versioneer_version.html#copyxnat.utils.versioneer_version.render_pep440_pre">render_pep440_pre() (in module copyxnat.utils.versioneer_version)</a>
 
       <ul>
@@ -645,6 +660,18 @@
 </li>
       <li><a href="copyxnat.xnat_backend.pyxnat_server.html#copyxnat.xnat_backend.pyxnat_server.PyXnatItemWithResources.resources">resources() (copyxnat.xnat_backend.pyxnat_server.PyXnatItemWithResources method)</a>
 </li>
+      <li><a href="copyxnat.xnat.commands.html#copyxnat.xnat.commands.CheckDatatypesCommand.run">run() (copyxnat.xnat.commands.CheckDatatypesCommand method)</a>
+
+      <ul>
+        <li><a href="copyxnat.xnat.commands.html#copyxnat.xnat.commands.Command.run">(copyxnat.xnat.commands.Command method)</a>
+</li>
+        <li><a href="copyxnat.xnat.commands.html#copyxnat.xnat.commands.CopyCommand.run">(copyxnat.xnat.commands.CopyCommand method)</a>
+</li>
+        <li><a href="copyxnat.xnat.commands.html#copyxnat.xnat.commands.ExportCommand.run">(copyxnat.xnat.commands.ExportCommand method)</a>
+</li>
+        <li><a href="copyxnat.xnat.commands.html#copyxnat.xnat.commands.ShowCommand.run">(copyxnat.xnat.commands.ShowCommand method)</a>
+</li>
+      </ul></li>
       <li><a href="copyxnat.utils.versioneer_version.html#copyxnat.utils.versioneer_version.run_command">run_command() (in module copyxnat.utils.versioneer_version)</a>
 
       <ul>
@@ -677,7 +704,7 @@
 </li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="copyxnat.xnat.commands.html#copyxnat.xnat.commands.show_command">show_command() (in module copyxnat.xnat.commands)</a>
+      <li><a href="copyxnat.xnat.commands.html#copyxnat.xnat.commands.ShowCommand">ShowCommand (class in copyxnat.xnat.commands)</a>
 </li>
       <li><a href="copyxnat.pyreporter.pyreporter.html#copyxnat.pyreporter.pyreporter.PyReporter.start_progress">start_progress() (copyxnat.pyreporter.pyreporter.PyReporter method)</a>
 </li>
@@ -706,6 +733,18 @@
 
 <h2 id="U">U</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="copyxnat.xnat.commands.html#copyxnat.xnat.commands.CheckDatatypesCommand.USE_DST_SERVER">USE_DST_SERVER (copyxnat.xnat.commands.CheckDatatypesCommand attribute)</a>
+
+      <ul>
+        <li><a href="copyxnat.xnat.commands.html#copyxnat.xnat.commands.CopyCommand.USE_DST_SERVER">(copyxnat.xnat.commands.CopyCommand attribute)</a>
+</li>
+        <li><a href="copyxnat.xnat.commands.html#copyxnat.xnat.commands.ExportCommand.USE_DST_SERVER">(copyxnat.xnat.commands.ExportCommand attribute)</a>
+</li>
+        <li><a href="copyxnat.xnat.commands.html#copyxnat.xnat.commands.ShowCommand.USE_DST_SERVER">(copyxnat.xnat.commands.ShowCommand attribute)</a>
+</li>
+      </ul></li>
+  </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="copyxnat.xnat.xnat_interface.html#copyxnat.xnat.xnat_interface.XnatBase.user_visible_info">user_visible_info() (copyxnat.xnat.xnat_interface.XnatBase method)</a>
 </li>
